Extend JPA query connector predicates (#427)
* Extend JPA query connector predicates

* Harden JPA query predicate validation

* Document JPA query connector adoption path

* Split JPA query connector docs guide

* Clarify JPA query input bindings